Bug 1799058 - Reset context on SetWidth and SetHeight. r=jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D161925